#TEMP-8 fixed overlapping on small content card when title wraps quite a lot.

--- a/components/shared/sass/partials.scss
+++ b/components/shared/sass/partials.scss
@@ -14,8 +14,6 @@ body
     padding: 10px;
     overflow: hidden;
     text-overflow: ellipsis;
-    position: absolute;
-    bottom: 0;
 
     a {
     	&:hover
